Integrate Linera client and wallet support in frontend
Adds Linera client JS/WASM artifacts, a new useLineraWallet hook, and utility for MetaMask. Updates dependencies to include @linera/client, ethers, and graphql-request. Introduces .env.example and updates .gitignore to exclude .env. Adds a testnet deployment script and documentation on Linera concepts. Removes unused useChecko hook and adds a Faucets page.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@linera/client": "^0.15.8",
     "clsx": "^2.1.1",
+    "ethers": "^6.16.0",
+    "graphql-request": "^7.4.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
