Add PulseToken contract and frontend integration
Introduces the PulseToken smart contract in Rust, including contract, service, state, and ABI files under contracts/pulse_token. Adds deployment script (deploy_token.ps1) and updates .gitignore for the new contract. On the frontend, adds usePulseToken hook and LocalSigner utility, updates dependencies to include @linera/signer, and modifies components and config to support PulseToken integration.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@linera/client": "^0.15.8",
+    "@linera/client": "^0.15.7",
+    "@linera/signer": "^0.15.6",
     "clsx": "^2.1.1",
     "ethers": "^6.16.0",
     "graphql-request": "^7.4.0",
