Add sound effects and update Mines game logic
Added bomb and diamond sound assets to the frontend. Updated Mines game logic and UI to support sound effects and improved state handling. Modified Rust smart contract and service logic for Mines and Pulse Token to support new features and bug fixes.

--- a/contracts/mines/Cargo.toml
+++ b/contracts/mines/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = { version = "1.0" }
 linera-views = "0.15.7"
 linera-base = "0.15.7"
 bcs = "0.1.3"
+pulse_token = { path = "../pulse_token" }
 
 [dev-dependencies]
 linera-sdk = { version = "0.15.7", features = ["test", "wasmer"] }
