--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@linera/signer": "^0.15.6",
     "clsx": "^2.1.1",
     "ethers": "^6.16.0",
+    "framer-motion": "^12.23.26",
     "graphql-request": "^7.4.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
