Add README and Vercel faucet proxy rewrites
Introduces a comprehensive README detailing PulseBet's features, setup, and deployment. Updates vercel.json to add rewrites for /faucet-proxy endpoints, enabling proxying to the Linera testnet faucet for testnet funding.

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -13,5 +13,15 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/faucet-proxy",
+      "destination": "https://faucet.testnet-conway.linera.net"
+    },
+    {
+      "source": "/faucet-proxy/(.*)",
+      "destination": "https://faucet.testnet-conway.linera.net/$1"
+    }
   ]
 }
