Add Color Trading game to frontend
Introduces the Color Trading game with new route, sidebar navigation, and supporting hook. Updates .env and .gitignore for Color Trading app ID and contract target. Adjusts layout for improved sidebar behavior and updates Vercel config for SPA routing.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /contracts/mines/target
 /contracts/pulse_token/target
 /contracts/memory_game/target
+/contracts/color_trading/target
+/scripts/node_modules
