Add Wordle contract and documentation
Introduced a new Wordle smart contract in the contracts/wordle directory, including its Rust source files, Cargo configuration, and toolchain settings. Updated .gitignore to exclude the Wordle contract's target directory. Added initial documentation for the Wordle contract in docs/wordle-info.md.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 /contracts/pulse_token/target
 /contracts/memory_game/target
 /contracts/color_trading/target
+/contracts/wordle/target
 /scripts/node_modules
