Add bingo contract and related assets/docs
Introduces the initial implementation of the bingo smart contract, including source code, configuration files, and dependencies. Adds a banner image and documentation for bugs and cross-chain issues. Updates .gitignore to exclude bingo contract build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 /contracts/memory_game/target
 /contracts/color_trading/target
 /contracts/wordle/target
+/contracts/bingo/target
 /scripts/node_modules
+
